refactor(controlplane): rename user id api fields to principal id
